--- a/prototype/app/build.gradle
+++ b/prototype/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.make_a_story_prototype"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -27,6 +27,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.google.android.material:material:1.0.0'
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     //recyclerview
     implementation 'com.android.support:recyclerview-v7:28.0.0'
