--- a/prototype/app/build.gradle
+++ b/prototype/app/build.gradle
@@ -28,10 +28,14 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.0.0'
 
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     //recyclerview
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    //cardview
+    implementation 'com.android.support:cardview-v7:28.0.0'
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.10.0'
