--- a/prototype/app/build.gradle
+++ b/prototype/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 
     //cardview
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.android.support:design:28.0.0'
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.10.0'
