--- a/prototype/app/build.gradle
+++ b/prototype/app/build.gradle
@@ -32,17 +32,15 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    //recyclerview
+    // RecyclerView
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
-    //cardview
+    // CardView
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.android.support:design:28.0.0'
 
-    //glide
-    implementation 'com.github.bumptech.glide:glide:4.10.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
-
+    // RxJava
+    implementation "io.reactivex.rxjava3:rxjava:3.0.0-RC4"
 
 }
