Added Home screen to the beginning of the application. Linked the word bank to "Categories" screen and verified that original steps still follow. TODO: Fix the back button from "Categories" to "Home". Currently it's not implemented because originally it's meant to redirect to "Story" page. We should make it an universal back button instead.

--- a/prototype/app/src/main/AndroidManifest.xml
+++ b/prototype/app/src/main/AndroidManifest.xml
@@ -12,12 +12,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".main.Categories.view.CategoriesActivity">
+        <activity android:name=".main.views.HomePage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".main.Categories.view.CategoriesActivity"/>
         <activity android:name=".main.Quiz.view.QuizActivity"/>
         <activity android:name=".main.Wordbank.view.WordbankActivity"/>
     </application>
