--- a/prototype/app/src/main/AndroidManifest.xml
+++ b/prototype/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
         <activity android:name=".main.views.HomePage"/>
         <activity android:name=".main.Categories.view.CategoriesActivity"/>
+        <activity android:name=".main.Characters.view.CharacterActivity"/>
         <activity android:name=".main.Quiz.view.QuizActivity"/>
         <activity android:name=".main.Wordbank.view.WordbankActivity"/>
     </application>
