--- a/prototype/app/build.gradle
+++ b/prototype/app/build.gradle
@@ -45,6 +45,6 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
 
     // RxJava
-    implementation "io.reactivex.rxjava3:rxjava:3.0.0-RC4"
+    implementation "io.reactivex.rxjava2:rxjava:2.1.1"
 
 }
