Created story template screen with 4 story template cards. Added font that's similar to Comic Sans.

--- a/prototype/app/src/main/AndroidManifest.xml
+++ b/prototype/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
         <activity android:name=".main.Quiz.view.QuizActivity"/>
         <activity android:name=".main.Wordbank.view.WordbankActivity"/>
         <activity android:name=".main.Quiz.view.CharacterGuideActivity"/>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
