--- a/prototype/app/src/main/AndroidManifest.xml
+++ b/prototype/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".main.Stories.view.StorySelectionActivity"/>
+        <activity android:name=".main.StoryTemplate.view.StoryTemplateActivity"/>
         <activity android:name=".main.Home.view.HomeActivity"/>
         <activity android:name=".main.Categories.view.CategoriesActivity"/>
         <activity android:name=".main.Characters.view.CharacterActivity"/>
