--- a/prototype/app/src/main/AndroidManifest.xml
+++ b/prototype/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name='android.permission.INTERNET' />
 
     <application
+        android:name=".main.Brainy.BrainyApplication"
         android:hardwareAccelerated="false"
         android:largeHeap="true"
         android:allowBackup="true"
