--- a/prototype/app/src/main/AndroidManifest.xml
+++ b/prototype/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.make_a_story_prototype">
 
     <!--for using glide-->
@@ -13,7 +12,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:name="com.example.make_a_story_prototype.main.Media.AudioPlayer">
         <activity android:name=".main.LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
