--- a/prototype/app/src/main/AndroidManifest.xml
+++ b/prototype/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".main.StorySelection.view.StorySelectionActivity"/>
+        <activity android:name=".main.StorySelection.view.Select"/>
         <activity android:name=".main.StoryTemplate.view.StoryTemplateActivity"/>
         <activity android:name=".main.Home.view.HomeActivity"/>
         <activity android:name=".main.Categories.view.CategoriesActivity"/>
