cswitching character screen to use client-provided images. changes to story selection screen to use repository

--- a/prototype/app/build.gradle
+++ b/prototype/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
     // lifecycle
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     implementation "android.arch.lifecycle:common-java8:$lifecycle_version"
