--- a/prototype/app/src/main/AndroidManifest.xml
+++ b/prototype/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.make_a_story_prototype">
 
     <!--for using glide-->
@@ -21,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".main.StorySelection.view.Select"/>
+        <activity android:name=".main.StorySelection.view.StorySelectionActivity"/>
         <activity android:name=".main.StoryTemplate.view.StoryTemplateActivity"/>
         <activity android:name=".main.Home.view.HomeActivity"/>
         <activity android:name=".main.Categories.view.CategoriesActivity"/>
