--- a/prototype/app/build.gradle
+++ b/prototype/app/build.gradle
@@ -28,7 +28,7 @@ android {
 dependencies {
     def nav_version = "2.3.0-alpha03"
     def lifecycle_version = "1.1.1"
-    def room_version = "1.1.1"
+    def room_version = "2.2.4"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -68,9 +68,20 @@ dependencies {
     implementation "android.arch.lifecycle:common-java8:$lifecycle_version"
 
     // room
-    implementation "android.arch.persistence.room:runtime:$room_version"
-    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
-    implementation "android.arch.persistence.room:rxjava2:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+
+    // optional - RxJava support for Room
+    implementation "androidx.room:room-rxjava2:$room_version"
+
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation "androidx.room:room-guava:$room_version"
+
+    // Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
 }
 repositories {
     mavenCentral()
