--- a/prototype/app/src/main/AndroidManifest.xml
+++ b/prototype/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-        android:name="com.example.make_a_story_prototype.main.Media.AudioPlayer">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".main.LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
