--- a/prototype/app/src/main/AndroidManifest.xml
+++ b/prototype/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <!--for using glide-->
     <uses-permission android:name='android.permission.INTERNET' />
+    <uses-permission android:name='Manifest.permission.WRITE_EXTERNAL_STORAGE' />
 
     <application
         android:name=".main.Brainy.BrainyApplication"
